--- a/project/product-management/index.html
+++ b/project/product-management/index.html
@@ -11,6 +11,10 @@
     <link href="style.css" rel="stylesheet">
     <link href="./mystyle/homepage.css" rel="stylesheet" >
     <link href="./mystyle/add-product.css" rel="stylesheet" >
+    <link href="/lib/fontawesome/css/fontawesome.min.css" rel="stylesheet">
+    <link href="/lib/fontawesome/css/brands.min.css" rel="stylesheet">
+    <link href="/lib/fontawesome/css/solid.min.css" rel="stylesheet">
+    <link href="/lib/fontawesome/css/regular.min.css" rel="stylesheet">
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/lib/jquery/jquery-3.6.4.min.js"></script>
     <script src="./myjs/localstore.js"></script>
