--- a/project/product-management/myhtml/finishregister.html
+++ b/project/product-management/myhtml/finishregister.html
@@ -12,7 +12,7 @@
     <a href="signin.html">
         <h1>Bấm để về trang chủ</h1>
     </a>    
-    <h2><div class="countdown"></div></h2>
+    <h2><div class="countdown">Tự động chuyển trang trong: <span style="color:red; margin-left: 4px; margin-right: 4px;" id="countdown"></span> giây</div></h2>
 
     <script src="../myjs/register.js"></script>
 </body>
