push card almost finish

--- a/project/product-management/index.html
+++ b/project/product-management/index.html
@@ -42,7 +42,7 @@
                 <ul class="menu-links">
                     <li class="search-box">
                             <i class='bx bx-search icon'></i>
-                            <input type="search" placeholder="Search...">
+                            <input oninput="inputCard()" onclick="hideCard()" id="search-card" type="search" placeholder="Search..." style="font-weight: 500">
                     
                     </li>             
                     <li class="links">
