--- a/project/product-management/index.html
+++ b/project/product-management/index.html
@@ -93,13 +93,13 @@
         <div class="home-text"></div>
     </section>
 
-    <nav aria-label="Page navigation example page-nav" id="page">
+    <nav aria-label="navigation example page-nav" >
         <ul class="pagination justify-content-center">
-          <li class="page-item disabled"><a class="page-link">Previous</a></li>
-          <li class="page-item"><a class="page-link" href="#" style="background: #0000ffc7; color: white;">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">Next</a></li>
+          <li onclick="page()" class="page-item disabled"><a class="page-link">Previous</a></li>
+          <li onclick="page()" class="page-item"><a class="page-link" href="#" style="background: #0000ffc7; color: white;">1</a></li>
+          <li onclick="page()" class="page-item"><a class="page-link" href="#">2</a></li>
+          <li onclick="page()" class="page-item"><a class="page-link" href="#">3</a></li>
+          <li onclick="page()" class="page-item"><a class="page-link" href="#">Next</a></li>
         </ul>
     </nav>
 
