--- a/project/product-management/index.html
+++ b/project/product-management/index.html
@@ -69,7 +69,7 @@
                 <li class="logout-mode">
                     <div id="btn-add-product" data-bs-toggle="modal" data-bs-target="#modal-confirm-logout" style="display: flex;">
                         <i class='bx bx-log-out icon'></i>
-                        <span class="text nav-text">Logout</span>
+                        <span class="text nav-text">Đăng xuất</span>
                     </div>         
                 </li> 
 
