--- a/project/product-management/myhtml/finishregister.html
+++ b/project/product-management/myhtml/finishregister.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../mystyle/finishregister.css">
+    <script src="/lib/jquery/jquery-3.6.4.min.js"></script>
 </head>
 <body>
     <canvas id="myCanvas" width="500" height="70"></canvas>   
