--- a/project/product-management/index.html
+++ b/project/product-management/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   
+<head>  
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master Card</title>
+    <script src="/lib/jquery/jquery-3.6.4.min.js"></script>
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" >
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="style.css" rel="stylesheet">
@@ -16,7 +16,6 @@
     <link href="/lib/fontawesome/css/solid.min.css" rel="stylesheet">
     <link href="/lib/fontawesome/css/regular.min.css" rel="stylesheet">
     <script src="/lib/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/lib/jquery/jquery-3.6.4.min.js"></script>
     <script src="./myjs/localstore.js"></script>
 </head>
 <body>
@@ -114,7 +113,7 @@
                 <form id="form-add-product" action="" method="post">
                     <div class="mb-3">
                         <label for="formFile" class="form-label" style="margin-top: 10px;">Tên khách hàng</label>
-                        <input class="form-control" type="text" name="name" id="clientname" required>
+                        <input class="form-control" type="text" name="name" id="client-name" required>
                     </div>
                     <div class="mb-3">
                         <label for="formFile" class="form-label inputcode">Mã thẻ</label>
@@ -133,6 +132,37 @@
         </div>
       </div>
     </div>
+
+    <div class="modal fade" id="modal-edit-product" tabindex="-1" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="modal-title">Sửa thẻ: <span class="edit-code" id="edit-code" style="color: blue;"></span></h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" style="background-color: #f9f8fb;">
+              <form id="form-add-product" action="" method="post">
+                  <div class="mb-3">
+                      <label for="formFile" class="form-label" style="margin-top: 10px;">Tên khách hàng</label>
+                      <input class="form-control" type="text" name="name" id="client-name-update" required>
+                  </div>
+                  <div class="mb-3">
+                      <label for="formFile" class="form-label inputcode">Mã thẻ</label>
+                      <input class="form-control" type="text" name="code" id="code-edit-part1" maxlength="4" required onkeyup="if(this.value.length == this.maxLength) document.getElementById('code-edit-part2').focus()">-
+                      <input class="form-control" type="text" name="code" id="code-edit-part2" maxlength="4" required onkeyup="if(this.value.length == this.maxLength) document.getElementById('code-edit-part3').focus()">-
+                      <input class="form-control" type="text" name="code" id="code-edit-part3" maxlength="4" required onkeyup="if(this.value.length == this.maxLength) document.getElementById('code-edit-part4').focus()">-
+                      <input class="form-control" type="text" name="code" id="code-edit-part4" maxlength="4" required>
+                  </div>
+              </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
+            <button onclick="saveEditCard()" id="btn-savecard" type="button" class="btn btn-primary ps-5 pe-5">Lưu</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
     <div id="modal-confirm-delete" class="modal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
@@ -153,56 +183,6 @@
         </div>
     </div>
 
-    <div id="modal-confirm-update" class="modal" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Xác nhận sửa</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <p>Bạn có muốn sửa thẻ : <span class="update-code" id="update-code"></span>?</p>
-            <p style="display: none;" id="code-confirm-update"></p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-            <button onclick="clickConfirmUpdate()" type="button" class="btn btn-primary">Có</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="modal fade" id="modal-update-product" tabindex="-1"  aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="modal-title">Sửa thẻ</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body" style="background-color: #f9f8fb;">
-              <form id="form-add-product" action="" method="post">
-                  <div class="mb-3">
-                      <label for="formFile" class="form-label" style="margin-top: 10px;">Tên khách hàng</label>
-                      <input class="form-control" type="text" name="name" id="clientnameold" required>
-                  </div>
-                  <div class="mb-3">
-                      <label for="formFile" class="form-label inputcode">Mã thẻ</label>
-                      <input class="form-control" type="text" name="code" id="code-part1" maxlength="4" required onkeyup="if(this.value.length == this.maxLength) document.getElementById('code-part2').focus()">-
-                      <input class="form-control" type="text" name="code" id="code-part2" maxlength="4" required onkeyup="if(this.value.length == this.maxLength) document.getElementById('code-part3').focus()">-
-                      <input class="form-control" type="text" name="code" id="code-part3" maxlength="4" required onkeyup="if(this.value.length == this.maxLength) document.getElementById('code-part4').focus()">-
-                      <input class="form-control" type="text" name="code" id="code-part4" maxlength="4" required>
-                  </div>
-              </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
-            <button id="btn-savecard" type="button" class="btn btn-primary ps-5 pe-5">Lưu</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-   
     <div id="modal-confirm-logout" class="modal" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
@@ -219,7 +199,6 @@
 
     <script src="./myjs/card-product.js"></script>
     <script src="index.js"></script>
-    <script src="https://unpkg.com/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
