--- a/project/product-management/myhtml/signin.html
+++ b/project/product-management/myhtml/signin.html
@@ -27,7 +27,7 @@
 <div class="align">
       <div class="grid">
         <div id="alert" class="fSignIn" style="display: block;"></div>
-          <form action="" method="POST" class="form" id="form-1">
+          <form action="" class="form" id="form-1">
             <div class="form login">
                 <div class="form-user">
                   <div class="user">
