--- a/project/product-management/myhtml/signup.html
+++ b/project/product-management/myhtml/signup.html
@@ -25,8 +25,8 @@
 
     <div class="align">
         <div class="grid">
-          <div id="alert" class="fSignIn" style="display: block;"></div>
             <form action="" class="form" id="form-1">
+                  <span id="alert" class="fSignIn" style="margin-bottom: -30px"></span>
               <div class="form login">
                   <div class="form-user">
                     <div class="user">
@@ -77,7 +77,7 @@
      
     
         <script src="../myjs/signup.js"></script>
-        <script src="../myjs/validation.js"></script>
-        <script src="../myjs/form-validation.js"></script>
+        <script src="../myjs/validation-signup.js"></script>
+        <script src="../myjs/form-validation-signup.js"></script>
 </body>
 </html>
