--- a/test.html
+++ b/test.html
@@ -8,6 +8,7 @@
     
 </head>
 <body>
+
     <script>
       function check5K(number){
       if(number === 1 || number === 5) {
@@ -24,7 +25,7 @@
       let arr = [1, 2, 3, 25, 125, 625, 10, 60];
       for(let i = 0; i < arr.length; i++){
           if(check5K(arr[i])){
-              document.write(arr[i] + "</br>")
+              // document.write(arr[i] + "</br>")
           }
       }
     </script>
