--- a/project/product-management/myhtml/signup.html
+++ b/project/product-management/myhtml/signup.html
@@ -25,7 +25,7 @@
 
     <div class="align">
         <div class="grid">
-            <form action="" class="form" id="form-1">
+            <form action="" method="get" class="form" id="form-1">
                   <span id="alert" class="fSignIn" style="margin-bottom: -30px"></span>
               <div class="form login">
                   <div class="form-user">
