--- a/project/portfolio/index.html
+++ b/project/portfolio/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- header design -->
     <header class="header">
-        <a href="" class="logo">Portfolio.</a>
+        <a href="" class="logo">Portfolio</a>
         
         <nav class="navbar">
             <a href="#home" class="active">Home</a>    
@@ -41,24 +41,32 @@
 
         <div class="profession-container">
             <div class="profession-box">
-                <div class="profession">
+                <div class="profession" style="--i:0">
                     <i class='bx bx-code-alt'></i>
                     <h3>Wed Developer</h3>
                 </div>
-                <div class="profession">
+                <div class="profession" style="--i:1">
                     <i class='bx bx-camera'></i>
                     <h3>Photographer</h3>
-                </div>
-                <div class="profession">
+                </div>  
+                <div class="profession" style="--i:2">
                     <i class='bx bx-palette'></i>
                     <h3>Wed Designer</h3>
                 </div>
-                <div class="profession">
+                <div class="profession" style="--i:3">
                     <i class='bx bx-video-recording'></i>
                     <h3>Videographer</h3>
                 </div>
+
+                <div class="circle"></div>
             </div>
+
+            <div class="overlay"></div>
         </div>
+
+        <!-- <div class="home-img">
+            <img src="images/meo.png" alt="">
+        </div> -->
 
     </section>  
 
