--- a/project/portfolio/index.html
+++ b/project/portfolio/index.html
@@ -38,7 +38,7 @@
 
             <a href=""class="btn">Download CV</a>
         </div>
-
+<!-- 
         <div class="profession-container">
             <div class="profession-box">
                 <div class="profession" style="--i:0">
@@ -62,7 +62,7 @@
             </div>
 
             <div class="overlay"></div>
-        </div>
+        </div> -->
 
         <!-- <div class="home-img">
             <img src="images/meo.png" alt="">
