fix avatar style

--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -47,7 +47,7 @@
                             </li>             
                             <li class="links link-avatar">
                                 <a href="">
-                                    <div class="ava left-ava"><a href=""><i class="bx left-avatar"></i></div>
+                                    <div class="ava left-ava" style="display: flex;align-items: center;"><i class="bx left-avatar"></i></div>
                                     <span style="margin-left: 5px;"class="text nav-text">Avatar</span>
                                 </a>
                             </li>                                                         
