--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -109,46 +109,52 @@
 
         </div>
 
-
-
         <div class="right-sidebar">
-                <div class="right-sidebar-ads">
-                    <h4>Được tài trợ</h4>
-                    <div class="sidebar-ads">       
-                        <div class="ads-one">
-                            <i class="fa-solid fa-xmark button-remove-one"></i>
-                            <a href="">
-                                <img src="./img/meo.png" alt="">      
-                                <div class="ads-title">
-                                    <h5>Meo meo</h5>
-                                    <span>meo.com</span>
-                                </div>
-                            </a>
-                        </div>
-                    
-                        <div class="ads-two">
-                            <i class="fa-solid fa-xmark button-remove-two"></i>
-                            <a href="">
-                                <img src="./img/shopee.png" alt="">
-                                <div class="ads-title">
-                                    <h5>Shopee</h5>
-                                    <span>shopee.vn</span>
-                                </div>
-                            </a>
-                        </div>
+            <div class="right-sidebar-ads">
+                <h4>Được tài trợ</h4>
+                <div class="sidebar-ads">       
+                    <div class="ads-one">
+                        <i class="fa-solid fa-xmark button-remove-one"></i>
+                        <a href="">
+                            <img src="./img/meo.png" alt="">      
+                            <div class="ads-title">
+                                <h5>Meo meo</h5>
+                                <span>meo.com</span>
+                            </div>
+                        </a>
                     </div>
-                </div>   
+                
+                    <div class="ads-two">
+                        <i class="fa-solid fa-xmark button-remove-two"></i>
+                        <a href="">
+                            <img src="./img/shopee.png" alt="">
+                            <div class="ads-title">
+                                <h5>Shopee</h5>
+                                <span>shopee.vn</span>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>   
 
-                <div class="sidebar-birthday">
-                    <h4>Sinh nhật</h4>
-                    <div class="birthday-info">
-                        <i class="birthday"></i>
-                        <p>Hôm nay là sinh nhật của <a href="">Nguyễn Thị Quỳnh.</p>
-                     </div>
+            <div class="rightbar-birthday">
+                <h4>Sinh nhật</h4>
+                <div class="birthday-info">
+                    <i class="birthday"></i>
+                    <p>Hôm nay là sinh nhật của <a href="">Nguyễn Thị Quỳnh.</p></a>
+                </div>
+            </div>
+
+            <div class="rightbar-contact">
+                <h4>Người liên hệ</h4>
+                <div class="rightbar-icon">
+                    <a href=""><i class='bx bxs-camera-movie right-icon'></i></a>
+                    <a href=""><i class='bx bx-search right-icon'></i></a>  
+                    <a href=""><i class='bx bx-menu right-icon'></i></a>
                 </div>
             </div>
         </div>
- 
     </div>
+
 </body>
 </html>
