--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -28,11 +28,12 @@
             </div>   
             <div class="home-media">
                 <div class="social-media">
-                    <a href="" data-toggle="tooltip" data-placement="top" title="Messenger"><i class='bx bxl-messenger'></i></a>
-                    <a href=""><i class='bx bxs-bell'></i></a>  
+                    <a href="" data-toggle="tooltip" data-placement="bottom" title="Messenger"><i class='bx bxl-messenger'></i></a>
+                    <a href="" data-toggle="tooltip" data-placement="bottom" title="Thông báo"><i class='bx bxs-bell'></i></a>  
                 </div>
+
                 <div class="ava">
-                    <a href=""><i class="bx avatar online"></i></a>
+                    <a href="" data-toggle="tooltip" data-placement="bottom" title="Tài khoản"><i class="bx avatar online"></i></a>
                 </div>
             </div>
 
@@ -153,9 +154,9 @@
             <div class="rightbar-contact"> 
                 <h4>Người liên hệ</h4>
                 <div class="rightbar-icon">
-                    <a href=""><i class='bx bxs-camera-movie right-icon'></i></a>
-                    <a href=""><i class='bx bx-search right-icon'></i></a>  
-                    <a href=""><i class='bx bx-menu right-icon'></i></a>
+                    <a href="" data-toggle="tooltip" data-placement="bottom" title="Cuộc gọi mới"><i class='bx bxs-camera-movie right-icon'></i></a>
+                    <a href="" data-toggle="tooltip" data-placement="bottom" title="Tìm kiếm"><i class='bx bx-search right-icon'></i></a>  
+                    <a href="" data-toggle="tooltip" data-placement="bottom" title="Tùy chọn"><i class='bx bx-menu right-icon'></i></a>
                 </div>
             </div>
 
