--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="./style/left-sidebar.css">
     <link rel="stylesheet" href="./style/right-sidebar.css">
+    <link rel="stylesheet" href="./style/main-content.css">
     <link rel="stylesheet" href="style.css">
     <script src="/lib/jquery/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -42,7 +43,7 @@
     
    <div class="fb-container">
         <div class="left-sidebar">    
-            <div class="top-content">  
+            <div class="container-top-content">  
                 <ul class="fb-menu-links">     
                     <li class="links">
                         <a href="">
@@ -109,7 +110,20 @@
         </div>
 
         <div class="main-content">
-
+            <div class="header-content">
+                <div class="top-content">
+                    <div class="left-top-content top-select">
+                        <a href="">               
+                            <i class='bx bxs-news'><span>Tin</span></i>
+                        </a>
+                    </div>    
+                    <div class="right-top-content">
+                        <a href="">
+                            <i class='bx bxs-movie-play'><span>Reels</span></i>    
+                        </a>
+                    </div>  
+                </div>    
+            </div>
 
         </div>
 
