--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -122,8 +122,19 @@
                             <i class='bx bxs-movie-play'><span>Reels</span></i>    
                         </a>
                     </div>  
-                </div>    
+                </div>   
+                
+                <div class="body-content">
+                    <div class="story-galley">
+                        <div class="story">
+                            <img src="./img/upload.png" alt="">
+                            <h6>Tạo tin</h6>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            
 
         </div>
 
