--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -130,7 +130,13 @@
                             <img src="./img/upload.png" alt="">
                             <h6>Tạo tin</h6>
                         </div>
+
+                        <div class="story">
+                            
+                        </div>
                     </div>
+
+                    
                 </div>
             </div>
 
