--- a/Module-2/CSS/fb/index.html
+++ b/Module-2/CSS/fb/index.html
@@ -131,8 +131,13 @@
                             <h6>Tạo tin</h6>
                         </div>
 
-                        <div class="story">
-                            
+                        <div class="story-one">    
+                        </div>
+
+                        <div class="story-two">    
+                        </div>
+
+                        <div class="story-three">    
                         </div>
                     </div>
 
