--- a/Module-2/CSS/exam/index.html
+++ b/Module-2/CSS/exam/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="./style/left-sidebar.css">
     <link rel="stylesheet" href="./style/right-sidebar.css">
     <link rel="stylesheet" href="./style/main-content.css">
-    <link rel="stylesheet" href="style.css">
     <script src="/lib/jquery/jquery-3.6.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@2.10.1/dist/umd/popper.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@2.10.1/dist/umd/popper.min.js"></script> -->
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">  
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="/lib/fontawesome/css/fontawesome.min.css" rel="stylesheet">
@@ -76,25 +75,35 @@
                     <p>Provide contact details to get more infomation about the city:</p>
                 </div>
 
-                <div class="contact">
-                    <div class="name">
-                       <span>Name</span><input type="text">
+                <div class="contact" id="form-1">
+                    <div class="form-user">
+                        <div class="user">
+                          <h6>Tên đầy đủ :</h6>  
+                        </div>  
+                          <input autocomplete="username" id="name" type="text" placeholder="VD: Lê Văn A" style="margin-bottom: 5px;">
+                          <span class="form-message"></span>  
                     </div>
 
-                    <div class="phone">
-                       <span>Phone Number</span><input type="text">
+                    <div class="form-phone">
+                        <div class="phone">
+                          <h6>Phone :</h6>  
+                        </div>  
+                          <input autocomplete="username" id="phone" type="text" placeholder="VD: 123-456-789" style="margin-bottom: 5px;">
+                          <span class="form-message"></span>  
                     </div>
 
-                    <div class="email">
-                       <span>Email</span><input type="text">
+                    <div class="form-email">
+                        <div class="email">
+                          <h6>Email :</h6>
+                        </div>
+                          <input autocomplete="email" id="email" type="text" placeholder="VD: abc@gmail.com" style="margin-bottom: 5px;">
+                          <span class="form-message"></span>
                     </div>
 
                     <button id="button" type="button" class="btn btn-info"><span>Submit</span></button>
                 </div>
             </div>
         </div>
-
-
 
         <div class="right-sidebar">
             <div class="first-right">
@@ -114,6 +123,12 @@
         </div>
     </div>    
     
-    <script src="index.js"></script>
+    <div class="footerNew">
+        <p><img src="./images/icon-maps.jpg"> Công ty CP CodeGym Việt Nam - MST: 010 810 4526. | <img src="./images/phoneft.jpeg"> Đ/c: Căn hộ TT01.23 dự án Hải Đăng city, phường Mỹ Đình 2, quận Nam Từ Liêm, thành phố Hà Nội. Hotline: 0989 534 458</p>
+    </div>
+
+    <script src="./myJS/validation-signup.js"></script>
+    <script src="./myJS/form-validation-signup.js"></script>
+    
 </body>
 </html>
